external-crates/move/crates/move-compiler/tests/move_check/expansion/spec_block_uses.exp
error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_block_uses.move:10:5
   │
10 │     spec module {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_block_uses.move:10:17
   │
10 │     spec module {
   │                 ^
   │                 │
   │                 Unexpected '{'
   │                 Expected an address or an identifier

